# ska-mid-dish-spfrx-talondx-console

./: .dockerignore  .gitignore  .gitlab-ci.yml  CODEOWNERS  Makefile  README.md  pyproject.toml
docs/: DOCS_README.md  Makefile  requirements.txt
docs/src/: conf.py  index.rst  spfrx.rst  system.rst  talondx.rst
docs/src/diagrams/: Engineering-Console-diagrams.vsdx  bite-sequence.puml  on-sequence.puml  (+1 more)
images/ska-mid-dish-spfrx-talondx-console/: Dockerfile  pytango_client_wrapper.py  spfrx-talondx.py  spfrx.py  spfrx_sat_pll.py  talondx.py  tango_db_ops.py
images/ska-mid-dish-spfrx-talondx-console-deploy/: Dockerfile  spfrx-deployer.py  spfrx_deployer.py
images/ska-mid-dish-spfrx-talondx-console-deployer/: Dockerfile  spfrx-deployer.py  spfrx_deployer.py
images/ska-mid-dish-spfrx-talondx-console-plot/: Dockerfile  plot_test.py  pytango_client_wrapper.py  spfrx-spectrum-plotter.py  spfrx_spectrum_plotter.py  utils.py
images/ska-mid-dish-spfrx-talondx-console-plotter/: Dockerfile  spfrx-spectrum-plotter.py  tango_db_ops.py
scripts/: config-etc-hosts.sh  config-spfrx-tango-host.sh  config-tango-dns.sh  create-datetime-dir.sh  spfrx-deploy-artifacts.sh  spfrx-get-fanspeed.sh  spfrx-host-qsfp-hipower.sh  spfrx-rxpu-ops.sh  spfrx-set-fanspeed.sh
scripts/remote/: program-bitstream.sh  spfrx-start.sh
test/: spfrx-config-ska001-test-odl12.json  spfrx-config-ska001-test-odl3.json
test/spfrx-config-individual/: spfrx-config-ska001-test-bandproc.json  spfrx-config-ska001-test-datarx.json  spfrx-config-ska001-test-pktcap.json  spfrx-config-ska001-test.json
(+35 files in other folders)
